assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P");

:root {
  --covid-color-green: rgb(0, 192, 163);
  --background-color-black: black;
  --white-color: white;
  --yellow-color: yellow;
  --red-color: rgb(178, 34, 52);
  --blue-color: rgb(60, 59, 110);
}

*, ::after, ::before {
  box-sizing: border-box;
}

* {
  font-family: "Press Start 2P", "arial";
}

body {
  margin: 0; 
  padding: 0;
  background-color: var(--background-color-black);
  touch-action: manipulation; 
}

.container {
  width: 100%;
  margin-right: auto; 
  margin-left: auto; 
  padding-left: 15px; 
  padding-right: 15px; 
}

canvas {
  border: 1px solid white; 
  width: 100%; 
  height: auto; 
}

.top-banner {
  background-color: var(--background-color-black);
  color: var(--white-color);
  display: grid;
  grid-template-rows: 1;
  grid-template-columns: 1fr 0.5fr 1fr;
  padding: 1rem;
}

.controller {
  width: 100%;
  display: grid; 
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  grid-gap: 10px; 
}

button {
  height: 100px; 
  width: 100%; 
  touch-action: manipulation; 
}

.fire-button {
  grid-column: 3 / 4; 
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}


.welcome-container {
  position: relative; 
  display: grid;
  grid-template-columns: 800px;
  height: 600px;
  grid-template-rows: 0.5fr 1fr 1.5fr;
  justify-items: center;
  background-image: linear-gradient(
    rgba(0, 0, 0, 0.5), 
    rgba(0, 0, 0, 0.6)
  ), url("/assets/artwork/background-2.jpg");
  background-position: center center;
}

.text-game-name {
  margin-top: 100px;
  color: var(--white-color);
  font-size: 4rem;
}

.font-atari {
  color: var(--white-color);
}

.text-color-game-name {
  color: var(--covid-color-green);
}

.game-overview-container {
  color: var(--white-color);
  margin: 0 15%;
  line-height: 1.2rem;
  font-size: 1rem;
}

.text-game-overview {
  color: var(--white-color);
  font-size: 1rem;
}

.text-your-mission {
  margin-top: 2rem;
}

.text-underline {
  text-decoration: underline;
}

.play-button {
  margin-top: 2rem;
  color: var(--background-color-black);
  background-color: var(--yellow-color);
  height: 40px;
  padding: 10px;
}

.menu-options {
  display: grid;
  grid-template-rows: 1fr;
  grid-template-columns: 1fr 1fr 1fr;
}

.menu-options-how {
  background-color: var(--red-color);
  color: var(--white-color);
  font-size: 0.7rem;
  height: 40px;
  padding: 10px;
}

.menu-options-sound {
  color: var(--background-color-black);
  background-color: var(--white-color);
  font-size: 0.7rem;
  height: 40px;
  padding: 10px;
}

.menu-options-score {
  background-color: var(--blue-color);
  color: var(--white-color);
  font-size: 0.7rem;
  height: 40px;
  padding: 10px;
}

.high-score {
  font-size: 5rem;
}

.arrow {
  font-size: 2rem;
}

/* .score-title {
  margin: 0;
  padding: 0;
} */

/* .score-value {
  color: var(--yellow-color);
} */

/* .lives-header {
  margin: 0;
  padding: 0;
} */

/* .lives {
  font-size: 1.2rem;
  color: var(--red-color);
} */

.lives-image {
  width: 25px;
  height: 20px;
}

.high-score {
  font-size: 1rem;
  color: var(--covid-color-green);
}

.high-score-menu {
  font-size: 2rem;
}

.text-high-score {
  color: var(--white-color);
  font-size: 1rem;
  margin-bottom: 3rem;
}


/*------------------------------------*\
  #MEDIA QUERIES
\*------------------------------------*/

@media (min-width: 576px) { 
  .container {
      max-width: 540px;       
  }
}

@media (min-width: 768px) { 
  .container {
      max-width: 720px;       
  }
}

@media (min-width: 992px) { 
  .container {
      max-width: 960px;       
  }
}

@media (min-width: 1200px) { 
  .container {
      max-width: 1140px;       
  }
}

